# vocab-filter

./: .gitignore  README.md  app.py  pyproject.toml  requirements-ui.txt
.streamlit/: config.toml
data/: cefr_seed.csv  known_words.txt  placement_test_words.csv  unknown_words.txt  word_meanings_extra_zh.csv  word_meanings_zh.csv
docs/superpowers/plans/: 2026-05-20-unified-composer-redesign.md
docs/superpowers/specs/: 2026-05-20-unified-composer-redesign.md
examples/: article.txt  words.txt
tests/: test_selftest.py  test_ui_state.py
vocab_filter/: cefr.py  cli.py  export_md.py  frequency.py  io_utils.py  level_mapping.py  level_profiles.py  lexicon.py  meanings.py  pipeline.py  placement.py  preprocess.py  scorer.py  selftest.py  ui_state.py
vocab_filter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
